# PureMyHA

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SPECIFICATION.md  cabal.project  puremyha.cabal  purermyha.cabal
.github/workflows/: ci.yml  release.yml
app/CLI/: Main.hs
app/Daemon/: Main.hs
config/: config.yaml.example
docs/: cli.md  configuration.md  daemon-ha.md  development.md  failover.md  features.md  http-api.md  logging.md
e2e/: Dockerfile.e2e  Dockerfile.e2e-coverage  Makefile  collect-coverage.sh  docker-compose.coverage-prebuilt.yml  docker-compose.coverage.yml  docker-compose.failover-without-observed-healthy.yml  docker-compose.source-only.yml  docker-compose.tls.yml  docker-compose.yml  run-all.sh  run-tls.sh
e2e/config/: invalid-semantic.yaml  invalid-syntax.yaml  puremyha-failover-without-observed-healthy.yaml  puremyha-source-only.yaml  puremyha-tls-skip-verify.yaml  puremyha-tls-verify-ca.yaml  puremyha.yaml
e2e/config/hooks/: on_lag_threshold_exceeded.sh  on_lag_threshold_recovered.sh  on_topology_drift.sh  post_switchover.sh
e2e/hooks/: post_failover.sh  pre_failover.sh  pre_switchover.sh
e2e/lib/: helpers.sh
e2e/mysql-conf/: replica-tls.cnf  replica1.cnf  replica2.cnf  source.cnf
e2e/mysql-init/: 01-source-init.sql
e2e/tests/: 01-topology-discovery.sh  02-auto-failover.sh  03-network-partition.sh  04-manual-switchover.sh  05-errant-gtid.sh  06-anti-flap.sh  07-hook-execution.sh  08-pause-resume-replica.sh  09-demote.sh  10-pause-resume-failover.sh  11-replica-retention-on-source-dead.sh  12-log-rotation.sh  13-http-health-check.sh  14-prometheus-metrics.sh  15-event-history.sh  15-tls.sh  16-validate-config.sh  17-auto-fence-split-brain.sh  18-replica-lag-threshold.sh  19-clone-replica.sh  20-switchover-drain-timeout.sh  21-probe-timeout-failover.sh  22-topology-drift-alerting.sh  23-structured-health-states.sh  24-dry-run-and-simulate-failover.sh  24-failover-without-observed-healthy.sh  25-stop-start-replication.sh  26-hook-security.sh  27-ipc-socket-permissions.sh  27-sighup-reload.sh  28-password-file-permissions.sh  29-tls-skip-verify-warn.sh
e2e/tls/: .gitignore  generate-certs.sh
pacemaker/: setup.sh
pacemaker-sample/: corosync.conf.example  setup.sh
pacemaker-sample/demo/: Dockerfile  Dockerfile.qdevice  Makefile  docker-compose.yml
pacemaker-sample/demo/config/: haproxy.cfg  mysql-init.sql  mysql-replica.cnf  mysql-source.cnf  mysql.pass  puremyha.yaml  repl.pass
pacemaker-sample/demo/scripts/: configure-resources.sh  node-entrypoint.sh  qdevice-entrypoint.sh  setup-cluster.sh  setup-replication.sh
pacemaker-sample/haproxy/: haproxy.cfg.example
pacemaker-sample/haproxy/hooks/: haproxy-common.sh  post_failover.sh  post_switchover.sh
pacemaker-sample/ocf/: puremyha
pacemaker/demo/: Dockerfile  Dockerfile.qdevice  Makefile
pacemaker/demo/config/: mysql.pass  puremyha.yaml
pacemaker/demo/scripts/: node-entrypoint.sh  qdevice-entrypoint.sh  setup-cluster.sh
pacemaker/ocf/: puremyha
packaging/: nfpm.yaml  postinstall.sh  puremyhad.logrotate  puremyhad.service  purermyhad.service
scripts/: tix-to-lcov.py
src/PureMyHA/: Clone.hs  Config.hs  Env.hs  Event.hs  Hook.hs  Logger.hs  PasswordFile.hs  Types.hs
src/PureMyHA/Failover/: Auto.hs  Candidate.hs  Demote.hs  ErrantGtid.hs  PauseReplica.hs  Switchover.hs
src/PureMyHA/HTTP/: Server.hs
src/PureMyHA/IPC/: Client.hs  Protocol.hs  Server.hs  Socket.hs
src/PureMyHA/Monitor/: Detector.hs  Event.hs  StateManager.hs  Worker.hs
src/PureMyHA/MySQL/: Auth.hs  Clone.hs  Connection.hs  GTID.hs  Query.hs  SqlEscape.hs  TLS.hs
src/PureMyHA/Supervisor/: Detector.hs  Event.hs  StateManager.hs  Worker.hs
src/PureMyHA/Topology/: Discovery.hs  State.hs
test/: Fixtures.hs
test/PureMyHA/: AutoSpec.hs  CandidateSpec.hs  CloneSpec.hs  ConfigSpec.hs  ConnectionSpec.hs  DemoteSpec.hs  DetectorSpec.hs  DiscoverySpec.hs  ErrantGtidSpec.hs  EventSpec.hs  GTIDSpec.hs  HTTPSpec.hs  HookSpec.hs  IPCSpec.hs  PasswordFileSpec.hs  PauseReplicaSpec.hs  QuerySpec.hs  SqlEscapeSpec.hs  StateSpec.hs  SwitchoverSpec.hs  TopologySpec.hs  WorkerSpec.hs
